Updated spotless; moved openFilePathInExplorer() to FileUtil; overhaul of preferences; general linting;