@@ -55,7 +55,7 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 
 /**
- * Controller class for the PipelineSettingsView
+ * Controller class for the PipelineSettingsView.
  *
  * @author Felix Baensch
  * @version 1.0.0.0
@@ -64,7 +64,7 @@ public class PipelineSettingsViewController {
     //<editor-fold desc="private final class variables" defaultstate="collapsed">
     private final StringProperty pipelineName;
     /**
-     * Stage of the MainView
+     * Stage of the MainView.
      */
     private final Stage mainStage;
     /**
@@ -75,46 +75,46 @@ public class PipelineSettingsViewController {
     //
     //<editor-fold desc="private class variables" defaultstate="collapsed">
     /**
-     * PipelineSettingsView
+     * PipelineSettingsView.
      */
     private PipelineSettingsView pipelineSettingsView;
     /**
-     * Stage of the PipelineSettingsView
+     * Stage of the PipelineSettingsView.
      */
     private Stage pipelineSettingsViewStage;
     /**
-     * Counts the amount of fragmentation algorithms in the pipeline
+     * Counts the amount of fragmentation algorithms in the pipeline.
      */
     private int algorithmCounter;
     /**
-     * Service for fragmentation, controls the process of a fragmentation
+     * Service for fragmentation, controls the process of a fragmentation.
      */
-    private FragmentationService fragmentationService;
+    private final FragmentationService fragmentationService;
     /**
-     * Array of the available fragmentation algorithms
+     * Array of the available fragmentation algorithms.
      */
-    private IMoleculeFragmenter[] fragmenters;
+    private final IMoleculeFragmenter[] fragmenters;
     /**
-     * Lists of fragmentation algorithms for the pipeline
+     * Lists of fragmentation algorithms for the pipeline.
      */
     private List<IMoleculeFragmenter> fragmenterList;
     /**
-     * Boolean to mark if pipeline fragmentation was started from the dialog
+     * Boolean to mark if pipeline fragmentation was started from the dialog.
      */
     private boolean isFragmentationStarted;
     /**
-     * Boolean value to enable fragment button if molecules are loaded
+     * Boolean value to enable fragment button if molecules are loaded.
      */
-    private boolean isMoleculeDataLoaded;
+    private final boolean isMoleculeDataLoaded;
     /**
-     * Boolean value whether a fragmentation is running
+     * Boolean value whether a fragmentation is running.
      */
-    private boolean isFragmentationRunning;
+    private final boolean isFragmentationRunning;
     //</editor-fold>
     //
     //<editor-fold desc="private static final class variables" defaultstate="collapsed">
     /**
-     * Logger
+     * Logger.
      */
     private static final Logger LOGGER = Logger.getLogger(PipelineSettingsViewController.class.getName());
     //</editor-fold>
@@ -128,7 +128,11 @@ public class PipelineSettingsViewController {
      * @param isFragmentationRunning boolean whether fragmentation is running
      * @param aConfiguration configuration instance to read resource file paths from
      */
-    public PipelineSettingsViewController(Stage aMainStage, FragmentationService aFragmentationService, boolean isMoleculeDataLoaded, boolean isFragmentationRunning, IConfiguration aConfiguration){
+    public PipelineSettingsViewController(Stage aMainStage,
+                                          FragmentationService aFragmentationService,
+                                          boolean isMoleculeDataLoaded,
+                                          boolean isFragmentationRunning,
+                                          IConfiguration aConfiguration) {
         this.mainStage = aMainStage;
         this.algorithmCounter = 0;
         this.fragmentationService = aFragmentationService;
@@ -145,11 +149,12 @@ public class PipelineSettingsViewController {
     //
     //<editor-fold desc="private methods" defaultstate="collapsed">
     /**
-     * Initialises stage and view and opens view in the initialised stage
+     * Initialises stage and view and opens view in the initialised stage.
      */
-    private void showPipelineSettingsView(){
-        if(this.pipelineSettingsView == null)
+    private void showPipelineSettingsView() {
+        if (this.pipelineSettingsView == null) {
             this.pipelineSettingsView = new PipelineSettingsView();
+        }
         this.pipelineSettingsViewStage = new Stage();
         Scene tmpScene = new Scene(this.pipelineSettingsView, GuiDefinitions.GUI_MAIN_VIEW_WIDTH_VALUE, GuiDefinitions.GUI_MAIN_VIEW_HEIGHT_VALUE);
         this.pipelineSettingsViewStage.setScene(tmpScene);
@@ -175,9 +180,9 @@ public class PipelineSettingsViewController {
     }
     //
     /**
-     * Add listeners and bindings
+     * Add listeners and bindings.
      */
-    private void addListenerAndBindings(){
+    private void addListenerAndBindings() {
         //text field binding
         this.pipelineSettingsView.getTextField().textProperty().bindBidirectional(this.pipelineName);
         //stage close request
@@ -189,7 +194,7 @@ public class PipelineSettingsViewController {
         this.pipelineSettingsView.getFragmentButton().setOnAction(event -> {
             this.isFragmentationStarted = true;
             this.fragmentationService.setPipeliningFragmentationName(this.pipelineName.get());
-            this.fragmentationService.setPipelineFragmenter(this.fragmenterList.toArray(new IMoleculeFragmenter[this.fragmenterList.size()]));
+            this.fragmentationService.setPipelineFragmenter(this.fragmenterList.toArray(new IMoleculeFragmenter[0]));
             this.pipelineSettingsViewStage.close();
         });
         //cancel button
@@ -200,45 +205,43 @@ public class PipelineSettingsViewController {
         //apply button
         this.pipelineSettingsView.getApplyButton().setOnAction(event -> {
             this.fragmentationService.setPipeliningFragmentationName(this.pipelineName.get());
-            this.fragmentationService.setPipelineFragmenter(this.fragmenterList.toArray(new IMoleculeFragmenter[this.fragmenterList.size()]));
+            this.fragmentationService.setPipelineFragmenter(this.fragmenterList.toArray(new IMoleculeFragmenter[0]));
             this.pipelineSettingsViewStage.close();
         });
         //default button
-        this.pipelineSettingsView.getDefaultButton().setOnAction(event -> {
-            this.reset();
-        });
+        this.pipelineSettingsView.getDefaultButton().setOnAction(event -> this.reset());
     }
     //
     /**
      * Adds a new row to the pipeline settings view, which allows to add a new fragmentation algorithms. ComboBox is
-     * initially set to fragmentation algorithm corresponding to the given name
+     * initially set to fragmentation algorithm corresponding to the given name.
      *
      * @param aFragmenterName name of Fragmenter to initially set ComboBox
      */
-    private void addNewChoiceRow(String aFragmenterName){
-        ComboBox tmpComboBox = new ComboBox();
-        for(IMoleculeFragmenter tmpFragmenter : this.fragmenters){
+    private void addNewChoiceRow(String aFragmenterName) {
+        ComboBox<String> tmpComboBox = new ComboBox<>();
+        for (IMoleculeFragmenter tmpFragmenter : this.fragmenters) {
             tmpComboBox.getItems().add(tmpFragmenter.getFragmentationAlgorithmName());
         }
         tmpComboBox.setPromptText(Message.get("PipelineSettingsView.comboBox.promptText"));
-        if(aFragmenterName != null){
+        if (aFragmenterName != null) {
             tmpComboBox.getSelectionModel().select(aFragmenterName);
         }
         tmpComboBox.setOnAction(anActionEvent -> {
             Object tmpSelectedFragmenterString = tmpComboBox.getSelectionModel().getSelectedItem();
             int tmpIndex = GridPane.getRowIndex(tmpComboBox) - 1;
             for (IMoleculeFragmenter tmpFragmenter : this.fragmenters) {
-                if (tmpSelectedFragmenterString.equals(tmpFragmenter.getFragmentationAlgorithmName())){
-                    if(this.fragmenterList.size() > tmpIndex){ // will not work cause size of list is set - why not, it is in case a fragmenter that has already been set is changed
+                if (tmpSelectedFragmenterString.equals(tmpFragmenter.getFragmentationAlgorithmName())) {
+                    // will not work cause size of list is set - why not, it is in case a fragmenter that has already been set is changed
+                    if (this.fragmenterList.size() > tmpIndex) {
                         this.fragmenterList.set(tmpIndex, Arrays.stream(this.fragmenters).filter(x -> x.getFragmentationAlgorithmName().equals(tmpSelectedFragmenterString)).findFirst().orElse(null));
-                    }
-                    else{
-                        this.fragmenterList.add( Arrays.stream(this.fragmenters).filter(x -> x.getFragmentationAlgorithmName().equals(tmpSelectedFragmenterString)).findFirst().orElse(null));
+                    } else {
+                        this.fragmenterList.add(Arrays.stream(this.fragmenters).filter(x -> x.getFragmentationAlgorithmName().equals(tmpSelectedFragmenterString)).findFirst().orElse(null));
                     }
                     break;
                 }
             }
-            if(this.fragmenterList.contains(null)){
+            if (this.fragmenterList.contains(null)) {
                 PipelineSettingsViewController.LOGGER.log(Level.SEVERE, "Error in pipeline fragmenter list, it contains null");
                 throw new IllegalArgumentException("fragmenter list for pipeline must not contain null");
             }
@@ -263,27 +266,27 @@ public class PipelineSettingsViewController {
         });
         Label tmpLabel = new Label(String.valueOf(++this.algorithmCounter));
         //remove removeButton from upper Row
-        if(this.algorithmCounter > 1)
-        {
-            this.pipelineSettingsView.getGridPane().getChildren().removeIf(node -> node instanceof Button && (GridPane.getRowIndex(node) == this.algorithmCounter - 1) && ((Button)node).getText().equals("-") );
+        if (this.algorithmCounter > 1) {
+            this.pipelineSettingsView.getGridPane().getChildren().removeIf(node -> node instanceof Button button && (GridPane.getRowIndex(node) == this.algorithmCounter - 1) && (button).getText().equals("-") );
         }
         //remove addButton
         this.pipelineSettingsView.getGridPane().getChildren().removeIf(node -> GridPane.getRowIndex(node) == this.algorithmCounter);
         //add new content to row
         this.pipelineSettingsView.addAlgorithmChoiceRow(tmpLabel, tmpComboBox, tmpFragmenterSettingsButton, this.algorithmCounter);
         //add new remove button to row
-        if(this.algorithmCounter > 1)
+        if (this.algorithmCounter > 1) {
             this.addRemoveRowButton(this.algorithmCounter);
+        }
         //add new add button to next row
         this.addAddRowButton(this.algorithmCounter+1); //+1 cause of next row
     }
     //
     /**
-     * Adds button to row of given index which adds a new row
+     * Adds button to row of given index which adds a new row.
      *
      * @param aRowNumber int to specify row position
      */
-    private void addAddRowButton(int aRowNumber){
+    private void addAddRowButton(int aRowNumber) {
         Button tmpAddButton = new Button();
         tmpAddButton.setTooltip(GuiUtil.createTooltip(Message.get("PipelineSettingsView.addNewRowButton.toolTip")));
         tmpAddButton.setText("+");
@@ -293,18 +296,16 @@ public class PipelineSettingsViewController {
         tmpAddButton.setMinWidth(GuiDefinitions.GUI_BUTTON_HEIGHT_VALUE);
         tmpAddButton.setPrefWidth(GuiDefinitions.GUI_BUTTON_HEIGHT_VALUE);
         tmpAddButton.setMaxWidth(GuiDefinitions.GUI_BUTTON_HEIGHT_VALUE);
-        tmpAddButton.setOnAction(anActionEvent ->{
-            this.addNewChoiceRow(null);
-        });
+        tmpAddButton.setOnAction(anActionEvent -> this.addNewChoiceRow(null));
         this.pipelineSettingsView.addAddRowButton(tmpAddButton, aRowNumber);
     }
     //
     /**
-     * Adds button to row of given index which removes its own row
+     * Adds button to row of given index which removes its own row.
      *
-     * @param aRowNumber
+     * @param aRowNumber specifies which row should be removed
      */
-    private void addRemoveRowButton(int aRowNumber){
+    private void addRemoveRowButton(int aRowNumber) {
         Button tmpRemoveButton = new Button();
         tmpRemoveButton.setTooltip(GuiUtil.createTooltip(Message.get("PipelineSettingsView.removeRowButton.toolTip")));
         tmpRemoveButton.setText("-");
@@ -324,7 +325,7 @@ public class PipelineSettingsViewController {
             this.addAddRowButton(tmpRowIndex);
             //
             this.algorithmCounter--;
-            this.fragmenterList.remove(this.fragmenterList.size()-1);
+            this.fragmenterList.removeLast();
             if(this.algorithmCounter > 1)
                 this.addRemoveRowButton(this.algorithmCounter);
         });
@@ -332,29 +333,28 @@ public class PipelineSettingsViewController {
     }
     //
     /**
-     * Cancels changes that are made in the fragmenter list
+     * Cancels changes that are made in the fragmenter list.
      */
-    private void cancelChangesInFragmenterList(){
-        if(this.fragmentationService.getPipelineFragmenter() == null || this.fragmentationService.getPipelineFragmenter().length < 1){
-            try{
+    private void cancelChangesInFragmenterList() {
+        if (this.fragmentationService.getPipelineFragmenter() == null || this.fragmentationService.getPipelineFragmenter().length < 1) {
+            try {
                 this.fragmenterList.add(this.fragmentationService.getSelectedFragmenter().copy());
             } catch (Exception anException) {
-                LOGGER.log(Level.SEVERE, anException.toString(), anException);
+                PipelineSettingsViewController.LOGGER.log(Level.SEVERE, anException.toString(), anException);
             }
-        }
-        else{
-            for(IMoleculeFragmenter tmpFragmenter : this.fragmentationService.getPipelineFragmenter()){
+        } else {
+            for (IMoleculeFragmenter tmpFragmenter : this.fragmentationService.getPipelineFragmenter()) {
                 this.fragmenterList.add(tmpFragmenter.copy());
             }
         }
     }
     //
     /**
-     * Resets the complete pipeline and the view, selected fragmenter for single fragmentation will be set as default value
+     * Resets the complete pipeline and the view. Selected fragmenter for single fragmentation will be set as default value.
      */
-    private void reset(){
+    private void reset() {
         this.setPipelineName("");
-        for(int i = 0; i < this.pipelineSettingsView.getGridPane().getChildren().size(); i++){
+        for (int i = 0; i < this.pipelineSettingsView.getGridPane().getChildren().size(); i++) {
             //remove addButton
             this.pipelineSettingsView.getGridPane().getChildren().removeIf(node -> GridPane.getRowIndex(node) == 2);
             //remove complete row content
@@ -364,9 +364,10 @@ public class PipelineSettingsViewController {
         }
         this.fragmenterList = new LinkedList<>();
         this.algorithmCounter = 1;
-        ComboBox tmpBox = (ComboBox) this.pipelineSettingsView.getGridPane().getChildren().stream().filter(node -> GridPane.getRowIndex(node) == 1 && (node instanceof ComboBox)).findFirst().orElse(null);
-        if(tmpBox != null)
+        ComboBox<String> tmpBox = (ComboBox<String>) this.pipelineSettingsView.getGridPane().getChildren().stream().filter(node -> GridPane.getRowIndex(node) == 1 && (node instanceof ComboBox)).findFirst().orElse(null);
+        if (tmpBox != null) {
             tmpBox.getSelectionModel().select(this.fragmentationService.getSelectedFragmenter().getFragmentationAlgorithmName());
+        }
     }
     //</editor-fold>
     //
@@ -376,30 +377,30 @@ public class PipelineSettingsViewController {
      *
      * @return StringProperty
      */
-    public StringProperty pipelineNameProperty(){
+    public StringProperty pipelineNameProperty() {
         return this.pipelineName;
     }
     //
     /**
-     * Returns pipeline name
+     * Returns pipeline name.
      *
      * @return String pipeline name
      */
-    public String getPipelineName(){
+    public String getPipelineName() {
         return this.pipelineName.get();
     }
     //
     /**
-     * Sets pipeline name
+     * Sets pipeline name.
      *
      * @param aName String
      */
-    public void setPipelineName(String aName){
+    public void setPipelineName(String aName) {
         this.pipelineName.set(aName);
     }
     //
     /**
-     * Return boolean value whether fragmentation is started inside PipelineSettingsView via FragmentButton
+     * Return boolean value whether fragmentation is started inside PipelineSettingsView via FragmentButton.
      *
      * @return true if fragmentation is started
      */
