@@ -46,13 +46,12 @@ import java.util.Locale;
  * @version 1.0.0.0
  */
 public class SugarRemovalUtilityFragmenterTest {
-
     /**
      * Constructor that sets the default locale to british english, which is important for the correct functioning of the
      * fragmenter because the settings tooltips are imported from the message.properties file.
      */
     public SugarRemovalUtilityFragmenterTest() {
-        Locale.setDefault(new Locale("en", "GB"));
+        Locale.setDefault(Locale.of("en", "GB"));
     }
     //
     /**
@@ -63,10 +62,10 @@ public class SugarRemovalUtilityFragmenterTest {
     @Test
     public void basicTest() throws Exception {
         SugarRemovalUtilityFragmenter tmpFragmenter = new SugarRemovalUtilityFragmenter();
-        System.out.println(tmpFragmenter.getFragmentationAlgorithmName());
-        System.out.println(tmpFragmenter.getSugarTypeToRemoveSetting());
-        for (Property tmpSetting : tmpFragmenter.settingsProperties()) {
-            System.out.println(tmpSetting.getName());
+        Assertions.assertDoesNotThrow(tmpFragmenter::getFragmentationAlgorithmName);
+        Assertions.assertDoesNotThrow(tmpFragmenter::getSugarTypeToRemoveSetting);
+        for (Property<?> tmpSetting : tmpFragmenter.settingsProperties()) {
+            Assertions.assertDoesNotThrow(tmpSetting::getName);
         }
     }
     //
@@ -91,27 +90,24 @@ public class SugarRemovalUtilityFragmenterTest {
         Assertions.assertFalse(tmpSRUFragmenter.shouldBePreprocessed(tmpOriginalMolecule));
         Assertions.assertTrue(tmpSRUFragmenter.canBeFragmented(tmpOriginalMolecule));
         tmpFragmentList = tmpSRUFragmenter.fragmentMolecule(tmpOriginalMolecule);
-        tmpSmilesCode = tmpSmiGen.create(tmpFragmentList.get(0));
-        System.out.println(tmpSmilesCode + " " + tmpFragmentList.get(0).getProperty(
-                IMoleculeFragmenter.FRAGMENT_CATEGORY_PROPERTY_KEY));
+        tmpSmilesCode = tmpSmiGen.create(tmpFragmentList.getFirst());
+        Assertions.assertNotNull(tmpFragmentList.getFirst().getProperty(IMoleculeFragmenter.FRAGMENT_CATEGORY_PROPERTY_KEY));
         //The sugar ring is not terminal and should not be removed, so the molecule remains unchanged
         Assertions.assertEquals("O=C(OC1C(OCC2=COC(OC(=O)CC(C)C)C3C2CC(O)C3(O)COC(=O)C)OC(CO)C(O)C1O)C=CC4=CC=C(O)C=C4", tmpSmilesCode);
         tmpSRUFragmenter.setRemoveOnlyTerminalSugarsSetting(false);
         tmpFragmentList = tmpSRUFragmenter.fragmentMolecule(tmpOriginalMolecule);
-        tmpSmilesCode = tmpSmiGen.create(tmpFragmentList.get(0));
-        System.out.println(tmpSmilesCode + " " + tmpFragmentList.get(0).getProperty(
-                IMoleculeFragmenter.FRAGMENT_CATEGORY_PROPERTY_KEY));
+        tmpSmilesCode = tmpSmiGen.create(tmpFragmentList.getFirst());
+        Assertions.assertNotNull(tmpFragmentList.getFirst().getProperty(IMoleculeFragmenter.FRAGMENT_CATEGORY_PROPERTY_KEY));
         //Now that all sugars are removed, the sugar ring is removed and an unconnected structure remains
         // the unconnected fragments are separated into different atom containers in the returned list
         Assertions.assertEquals("O=C(OCC1(O)C(O)CC2C(=COC(OC(=O)CC(C)C)C21)CO)C", tmpSmilesCode);
         Assertions.assertEquals("O=C(O)C=CC1=CC=C(O)C=C1", tmpSmiGen.create(tmpFragmentList.get(1)));
-        System.out.println(tmpSmiGen.create(tmpFragmentList.get(2)) + " " + tmpFragmentList.get(2).getProperty(
-                IMoleculeFragmenter.FRAGMENT_CATEGORY_PROPERTY_KEY));
+        Assertions.assertNotNull(tmpFragmentList.get(2).getProperty(IMoleculeFragmenter.FRAGMENT_CATEGORY_PROPERTY_KEY));
         tmpSRUFragmenter.setRemoveOnlyTerminalSugarsSetting(true);
-        Assertions.assertFalse(tmpSRUFragmenter.shouldBeFiltered(tmpFragmentList.get(0)));
-        Assertions.assertFalse(tmpSRUFragmenter.shouldBePreprocessed(tmpFragmentList.get(0)));
-        Assertions.assertTrue(tmpSRUFragmenter.canBeFragmented(tmpFragmentList.get(0)));
-        IAtomContainer tmpAfterPreprocessing = tmpSRUFragmenter.applyPreprocessing(tmpFragmentList.get(0));
+        Assertions.assertFalse(tmpSRUFragmenter.shouldBeFiltered(tmpFragmentList.getFirst()));
+        Assertions.assertFalse(tmpSRUFragmenter.shouldBePreprocessed(tmpFragmentList.getFirst()));
+        Assertions.assertTrue(tmpSRUFragmenter.canBeFragmented(tmpFragmentList.getFirst()));
+        IAtomContainer tmpAfterPreprocessing = tmpSRUFragmenter.applyPreprocessing(tmpFragmentList.getFirst());
         Assertions.assertTrue(tmpSRUFragmenter.canBeFragmented(tmpAfterPreprocessing));
     }
 }
